fixes notification spam and stuck behavior

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -19,8 +19,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 50%;
-    max-width: 75%;
+    width: 30%;
+    max-width: 50%;
     max-height: 100%;
 
     border: .1rem solid gray;
@@ -77,9 +77,8 @@ form p {
     overflow-y: auto;
     max-height: 25rem;
 
-    margin-bottom: 3rem;
-
     text-align: left;
+    margin-bottom: 1rem;
 }
 
 .add-btn-wrapper {
@@ -92,7 +91,6 @@ form p {
     border: .5rem solid #b0bd81;
     border-radius: .25rem;
 
-    margin-bottom: 2rem;
     width: 100%;
     height: 3rem;
 
@@ -114,12 +112,9 @@ select {
 }
 
 .button-entry {
-    margin-bottom: 2rem;
-    border-top: .5rem solid gray;
-}
-
-.button-entry:last-child {
-    border-bottom: .5rem solid gray;
+    margin-bottom: .25rem;
+    border: .25rem double gray;
+    border-radius: .25rem;
 }
 
 .entry-name-shortcut {
@@ -155,6 +150,7 @@ select {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: 1rem;
 }
 
 .undo-restore-btn {
@@ -175,9 +171,10 @@ select {
 
 .file-btns-wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 2rem;
     flex-wrap: wrap;
+    margin-bottom: 1rem;
 }
 
 .file-btn {
@@ -200,9 +197,9 @@ select {
     display: none;
 }
 
-.submit-btn-wrapper {
+.preset-submit-btn-wrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 
     margin-top: 1rem;
     margin-bottom: 1rem;
